Theme: Fix content tab scroll color on mobile
Make the `--content-bg-color` variable hsl so that we can easily control
opacity later.

--- a/docs/rsdk_theme/colors.css
+++ b/docs/rsdk_theme/colors.css
@@ -5,7 +5,7 @@
     --md-footer-bg-color: var(--md-primary-fg-color);
     --md-footer-bg-color--dark: var(--md-primary-fg-color);
     --md-default-bg-color: rgb(248, 248, 248);
-    --content-bg-color: hsla(26, 35%, 85%, 0.8);
+    --content-bg-color: hsl(26, 35%, 85%);
     --circle-border-color: rgba(240, 200, 170, 20%);
     --square-border-color: rgba(224, 0, 0, 20%);
     --md-typeset-a-color: #5488E8;
@@ -21,7 +21,7 @@
     --md-primary-fg-color--dark: var(--md-primary-fg-color);
     --md-footer-bg-color: var(--md-primary-fg-color);
     --md-footer-bg-color--dark: var(--md-primary-fg-color);
-    --content-bg-color: hsla(210, 35%, 22%, 0.8);
+    --content-bg-color: hsl(210, 35%, 22%);
     --circle-border-color: rgba(15, 55, 95, 20%);
     --square-border-color: rgba(120, 0, 0, 20%);
     --controller-a-color: #70C040;
